# MRScarbs

kite connenct 1/: [FINFLO BASE DOCS].txt  access_token.py  historical_data_zerodha.py  historical_enum.py  instrument_token.py  websokets_kite_python.py
kite connenct 1/finflo sqls/: api_sys_config.sql  finflo sqls.sql  finflo_base_db_tbl_quant_stats.sql  insert_tbl_max_historical_limit.sql  stp_Update_Instrument.sql  stp_get_api_config.sql  stp_get_instrument_info.sql  stp_get_limits.sql  stp_get_sinterval.sql  stp_get_tbl_current_ltp.sql  stp_insert_current_quote.sql  stp_insert_or_Update_QuantStats.sql  tbl_banknifty_sorted.sql  tbl_current_quotes.sql  tbl_instruments_info.sql  tbl_max_historical_limit.sql  tbl_nifty50_sorted.sql  tbl_quant_stats.sql  tbl_sensex_sorted.sql
kite connenct 1/finflo_go_files/finflo_go_apis/: go.mod  main.go
kite connenct 1/finflo_go_files/finflo_go_quotes/: go.mod  go.sum  heatmap.go
kite connenct 1/finflo_python_files/: access_token.py  add_stocks_to_current_quotes.py  db_config.ini  historical_data_zerodha.py  historical_enum.py  instrument_token.py  sys_config_opener.py
kite connenct 1/finflo_rust_files/finflo_rust_files/finflo_rust_files/backtester/backtester/: Cargo.toml
kite connenct 1/finflo_rust_files/finflo_rust_files/finflo_rust_files/backtester/backtester/src/: main.rs
kite connenct 1/finflo_rust_files/finflo_rust_files/finflo_rust_files/finflo_rust_files/finflo/: .env  Cargo.toml
kite connenct 1/finflo_rust_files/finflo_rust_files/finflo_rust_files/finflo_rust_files/finflo/src/: main.rs
(+60 files in other folders)
