[package]
name = "backtester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.39"
chrono = "0.4"
yata = "0.7.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
