[package]
name = "finflo_rust_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio"] }
chrono = "0.4"
mysql = "25.0.0"
async-trait = "0.1"
dotenv = "0.15.0"
kiteconnect = "*"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
openssl = { version = "0.10.45", features = ["vendored"] }
anyhow = "1.0"